--- a/src/components/TabbedContainer/styles.raw.less
+++ b/src/components/TabbedContainer/styles.raw.less
@@ -30,3 +30,12 @@ component {
   }
   
 }
+
+@media (max-width: 600px) {
+  component {
+    .tabs .tab {
+      width: auto;
+      padding: 0 5px;
+    }
+  }
+}
