--- a/src/components/draft/StatusView/styles.raw.less
+++ b/src/components/draft/StatusView/styles.raw.less
@@ -28,10 +28,9 @@ component {
   .teamSummary {
     padding: 5px;
 
-    .label {
+    .label, .modeLabel {
       display: inline-block;
-      padding: 3px;
-      margin: 5px 0;
+      color: #666;
     }
 
     .value {
@@ -81,5 +80,4 @@ component {
 
     }
   }
-  
 }
