--- a/src/home/Component/styles.raw.less
+++ b/src/home/Component/styles.raw.less
@@ -19,7 +19,7 @@ container {
 
     .highlight {
       width: 30%;
-      min-width: 400px;
+      min-width: 300px;
       margin: 5px;
 
       .highlightTitle {
